2017-08-18  Chris Dumez  <cdumez@apple.com>

        REGRESSION (r220601): Crash when closing google doc after switching the order of tabs in safari
        https://bugs.webkit.org/show_bug.cgi?id=175721
        <rdar://problem/33928369>

        Reviewed by Geoffrey Garen.

        Make sure WebProcess::markAllLayersVolatile() does not call WTFMove() multiple times
        on the same completion handler. Use a RefCounter to hold on to the completion handler
        and make sure the handler gets called when the RefCounter's value becomes 0.

        * WebProcess/WebProcess.cpp:
        (WebKit::WebProcess::cancelPrepareToSuspend):
        (WebKit::WebProcess::markAllLayersVolatile):
        (WebKit::WebProcess::cancelMarkAllLayersVolatile):
        * WebProcess/WebProcess.h:

2017-08-18  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.17.91 release.

        * gtk/NEWS: Add release notes for 2.17.91.

2017-08-17  Jacobo Aragunde Pérez  <jaragunde@igalia.com>

        [WPE][GTK] Ensure proper casting of data in gvariants
        https://bugs.webkit.org/show_bug.cgi?id=175667

        Reviewed by Michael Catanzaro.

        g_variant_builder_add requires data to have the correct width for their types, using
        casting if necessary. Corrected a call where a single precision float was being put
        into a double precision parameter without a cast.

        * UIProcess/API/glib/WebKitWebViewSessionState.cpp:
        (encodeFrameState):

2017-08-18  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r220854.
        https://bugs.webkit.org/show_bug.cgi?id=175716

        I'm not sure we really need this (Requested by KaL on
        #webkit).

        Reverted changeset:

        "[GTK][WPE] Add NTLM authentication enabled API"
        https://bugs.webkit.org/show_bug.cgi?id=122952
        http://trac.webkit.org/changeset/220854

2017-08-17  Carlos Garcia Campos  <cgarcia@igalia.com>
